--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,22 @@
 *.exe
 *.out
 *.app
+
+.DS_Store
+node_modules/
+dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.vscode
+*.history
+
+00-经典书籍
+00-经典书籍/
